<resources>
    <string name="app_name">BluetoothArduino</string>
    <string name="lamp1">Lampa1</string>
    <string name="lamp2">Lampa2</string>
    <string name="lamp3">Lampa3</string>
    <string name="temp">Temp</string>
    <string name="window">Fönster</string>
    <string name="alarm">Larm</string>
    <string name="disconnect">Koppla från</string>
    <string name="devices">Enheter</string>
    <string name="paired">Visa parkopplade enheter</string>
    <string name="stt">Säg något!</string>
    <string name="lamp1On">Lamp 1\nOn</string>
    <string name="lamp1Off">Lamp 1\nOff</string>
    <string name="lamp2On">Lamp 2\nOn</string>
    <string name="lamp2Off">Lamp 2\nOff</string>
    <string name="lamp3On">Lamp 3\nOn</string>
    <string name="lamp3Off">Lamp 3\nOff</string>
    <string name="windowOpen">Fönster\nÖppet</string>
    <string name="windowClosed">Fönster\nStängt</string>
    <string name="alarmOn">Larm\npå</string>
    <string name="alarmOff">Larm\nav</string>



</resources>
